# english_memory

./: README.md
fast_api/: alembic.ini  config.py  pyproject.toml
fast_api/app/: main.py
fast_api/app/dao/: base_dao.py  english_words_dao.py  russian_words_dao.py
fast_api/app/database/: database.py
fast_api/app/migration/: env.py
fast_api/app/migration/versions/: f18620f7d412_.py
fast_api/app/models/: english_words.py  russian_words.py  types.py
fast_api/app/schemas/: word.py
